manifests/test01/rsyc-test.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsync-test
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rsync-test
  template:
    metadata:
      labels:
        app: rsync-test
    spec:
      securityContext:
        fsGroup: 10001
      containers:
      - name: rsync-test
        image: wimvandenwyngaert/test:3.0.0
        command:
        - /bin/sh
        - -c
        - sleep infinity
        volumeMounts:
        - name: data
          mountPath: /data
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          runAsGroup: 10001
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: rsync-test-pvc
