manifests/test01/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-service
spec:
  clusterIP: None
  selector:
    app: simple-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: simple-statefulset
spec:
  serviceName: "simple-service"
  replicas: 3
  selector:
    matchLabels:
      app: simple-app
  template:
    metadata:
      labels:
        app: simple-app
    spec:
      containers:
      - name: simple-container
        image: wimvandenwyngaert/test:2.14.1
        command:
        - /bin/sh
        - -c
        - sleep infinity
        volumeMounts:
        - name: data-volume
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data-volume
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: statefulset-sc
      resources:
        requests:
          storage: 1Gi
